[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui_scenes/level_creation.gd" type="Script" id=2]

[node name="LevelCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 229.0
margin_top = 211.0
margin_right = 795.0
margin_bottom = 389.0
custom_constants/separation = 20

[node name="ReturnButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 566.0
margin_bottom = 25.0
text = "Return to main menu"

[node name="VBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 566.0
margin_bottom = 74.0

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 500.0
margin_bottom = 29.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
placeholder_text = "Message to deliver"

[node name="ApplyButton" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 504.0
margin_right = 566.0
margin_bottom = 29.0
hint_tooltip = "I'll filter some symbols and we can begin!"
size_flags_horizontal = 0
text = "apply"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 566.0
margin_bottom = 133.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 566.0
margin_bottom = 19.0
text = "Filling of the level with obstacles"

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 566.0
margin_bottom = 39.0
max_value = 1.0
step = 0.01
value = 0.3

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 566.0
margin_bottom = 178.0
disabled = true
text = "Start YOUR level!"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/VBoxContainer2/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer2/ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/VBoxContainer/HSlider" to="." method="_on_hslider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
